# CMakeList.txt : CMake project for comme_engine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (comme_engine "comme_engine.cpp" "comme_engine.h")

# TODO: Add tests and install targets if needed.
